tests/baselines/reference/duplicateClassElements.errors.txt
==== tests/cases/compiler/duplicateClassElements.ts (6 errors) ====
    class a {
        public a;
        public a;
               ~
!!! duplicateClassElements.ts(3,12): error TS2000: Duplicate identifier 'a'. Additional locations:
!!! 	duplicateClassElements.ts(2,5)
        public b() {
        }
        public b() {
        ~~~~~~~~~~~~
        }
    ~~~~~
!!! duplicateClassElements.ts(6,5): error TS2000: Duplicate identifier 'b'. Additional locations:
!!! 	duplicateClassElements.ts(4,5)
        public x;
        get x() {
            ~
!!! duplicateClassElements.ts(9,9): error TS2000: Duplicate identifier 'x'. Additional locations:
!!! 	duplicateClassElements.ts(8,5)
            return 10;
        }
        set x(_x: number) {
        }
    
        get y() {
            return "Hello";
        }
        set y(_y: string) {
        }
    
        public z() {
        }
        get z() {
            ~
!!! duplicateClassElements.ts(23,9): error TS2000: Duplicate identifier 'z'. Additional locations:
!!! 	duplicateClassElements.ts(21,5)
            return "Hello";
        }
        set z(_y: string) {
        }
    
        get x2() {
            return 10;
        }
        set x2(_x: number) {
        }
        public x2;
               ~~
!!! duplicateClassElements.ts(34,12): error TS2000: Duplicate identifier 'x2'. Additional locations:
!!! 	duplicateClassElements.ts(29,5)
    
        get z2() {
            return "Hello";
        }
        set z2(_y: string) {
        }
        public z2() {
        ~~~~~~~~~~~~~
        }
    ~~~~~
!!! duplicateClassElements.ts(41,5): error TS2000: Duplicate identifier 'z2'. Additional locations:
!!! 	duplicateClassElements.ts(36,5)
    
    }